--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+	        "body-parser": "^1.19.0",
+		"moment": "^2.29.1",
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
-		"cors": "^2.8.5"
+		"cors": "^2.8.5",
+		"shortid": "^2.2.16",
+		"mongodb": "^4.1.2",
+		"mongoose": "^6.0.5"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
